namespace Election.Entity
{
    public class FileSettings
    {
        public string JsonFilePath { get; set; }
        public string FirstCityTSVPath { get; set; }
        public string TotalTSV { get; set; }
        public string OtherCitiesJSON { get; set; }
    }

}
